added residuals for model 2

--- a/models/regression-height.ipynb
+++ b/models/regression-height.ipynb
@@ -1058,6 +1058,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Residuals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SSR: 4.684341342170713\n",
+      "MSE: 0.2755494907159243\n",
+      "RMSE: 0.627174634566168\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"SSR:\", fit_2.ssr)\n",
+    "print(\"MSE:\", fit_2.mse_resid)\n",
+    "print(\"RMSE:\", np.sqrt(fit.mse_resid))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
