added regression model 3

--- a/models/regression-height.ipynb
+++ b/models/regression-height.ipynb
@@ -1185,6 +1185,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regression Model 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>         <td>height</td>      <th>  R-squared:         </th> <td>   0.894</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.874</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   44.86</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Tue, 05 Apr 2022</td> <th>  Prob (F-statistic):</th> <td>5.16e-08</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>16:23:00</td>     <th>  Log-Likelihood:    </th> <td> -13.379</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>    20</td>      <th>  AIC:               </th> <td>   34.76</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>    16</td>      <th>  BIC:               </th> <td>   38.74</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     3</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "             <td></td>               <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>              <td>   41.1065</td> <td>   12.454</td> <td>    3.301</td> <td> 0.005</td> <td>   14.705</td> <td>   67.508</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>gender[T.male]</th>         <td>    0.7280</td> <td>    0.247</td> <td>    2.943</td> <td> 0.010</td> <td>    0.204</td> <td>    1.252</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>average_height_parents</th> <td>    0.7435</td> <td>    0.076</td> <td>    9.789</td> <td> 0.000</td> <td>    0.583</td> <td>    0.905</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>weight</th>                 <td>    0.0114</td> <td>    0.013</td> <td>    0.891</td> <td> 0.386</td> <td>   -0.016</td> <td>    0.038</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td> 2.290</td> <th>  Durbin-Watson:     </th> <td>   1.434</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.318</td> <th>  Jarque-Bera (JB):  </th> <td>   0.973</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.502</td> <th>  Prob(JB):          </th> <td>   0.615</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 3.398</td> <th>  Cond. No.          </th> <td>1.91e+04</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.91e+04. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                 height   R-squared:                       0.894\n",
+       "Model:                            OLS   Adj. R-squared:                  0.874\n",
+       "Method:                 Least Squares   F-statistic:                     44.86\n",
+       "Date:                Tue, 05 Apr 2022   Prob (F-statistic):           5.16e-08\n",
+       "Time:                        16:23:00   Log-Likelihood:                -13.379\n",
+       "No. Observations:                  20   AIC:                             34.76\n",
+       "Df Residuals:                      16   BIC:                             38.74\n",
+       "Df Model:                           3                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==========================================================================================\n",
+       "                             coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------------------\n",
+       "Intercept                 41.1065     12.454      3.301      0.005      14.705      67.508\n",
+       "gender[T.male]             0.7280      0.247      2.943      0.010       0.204       1.252\n",
+       "average_height_parents     0.7435      0.076      9.789      0.000       0.583       0.905\n",
+       "weight                     0.0114      0.013      0.891      0.386      -0.016       0.038\n",
+       "==============================================================================\n",
+       "Omnibus:                        2.290   Durbin-Watson:                   1.434\n",
+       "Prob(Omnibus):                  0.318   Jarque-Bera (JB):                0.973\n",
+       "Skew:                          -0.502   Prob(JB):                        0.615\n",
+       "Kurtosis:                       3.398   Cond. No.                     1.91e+04\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 1.91e+04. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fit_3 = smf.ols(formula = \"height ~ average_height_parents + gender + weight\", data=df).fit()\n",
+    "fit_3.summary()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
