added regression model 4

--- a/models/regression-height.ipynb
+++ b/models/regression-height.ipynb
@@ -1307,6 +1307,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regression Model 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>         <td>height</td>      <th>  R-squared:         </th> <td>   0.991</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.989</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   422.1</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Tue, 05 Apr 2022</td> <th>  Prob (F-statistic):</th> <td>3.25e-15</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>16:23:50</td>     <th>  Log-Likelihood:    </th> <td>  11.526</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>    20</td>      <th>  AIC:               </th> <td>  -13.05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>    15</td>      <th>  BIC:               </th> <td>  -8.073</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     4</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "             <td></td>               <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>              <td>  167.4839</td> <td>   10.484</td> <td>   15.975</td> <td> 0.000</td> <td>  145.138</td> <td>  189.830</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>gender[T.male]</th>         <td>    0.0664</td> <td>    0.090</td> <td>    0.740</td> <td> 0.471</td> <td>   -0.125</td> <td>    0.258</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>average_height_parents</th> <td>   -0.0143</td> <td>    0.063</td> <td>   -0.227</td> <td> 0.824</td> <td>   -0.149</td> <td>    0.120</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>weight</th>                 <td>    1.0942</td> <td>    0.084</td> <td>   13.007</td> <td> 0.000</td> <td>    0.915</td> <td>    1.274</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>bmi</th>                    <td>   -2.9849</td> <td>    0.232</td> <td>  -12.885</td> <td> 0.000</td> <td>   -3.479</td> <td>   -2.491</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td> 0.870</td> <th>  Durbin-Watson:     </th> <td>   2.285</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.647</td> <th>  Jarque-Bera (JB):  </th> <td>   0.768</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.422</td> <th>  Prob(JB):          </th> <td>   0.681</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 2.543</td> <th>  Cond. No.          </th> <td>5.47e+04</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 5.47e+04. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                 height   R-squared:                       0.991\n",
+       "Model:                            OLS   Adj. R-squared:                  0.989\n",
+       "Method:                 Least Squares   F-statistic:                     422.1\n",
+       "Date:                Tue, 05 Apr 2022   Prob (F-statistic):           3.25e-15\n",
+       "Time:                        16:23:50   Log-Likelihood:                 11.526\n",
+       "No. Observations:                  20   AIC:                            -13.05\n",
+       "Df Residuals:                      15   BIC:                            -8.073\n",
+       "Df Model:                           4                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==========================================================================================\n",
+       "                             coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------------------\n",
+       "Intercept                167.4839     10.484     15.975      0.000     145.138     189.830\n",
+       "gender[T.male]             0.0664      0.090      0.740      0.471      -0.125       0.258\n",
+       "average_height_parents    -0.0143      0.063     -0.227      0.824      -0.149       0.120\n",
+       "weight                     1.0942      0.084     13.007      0.000       0.915       1.274\n",
+       "bmi                       -2.9849      0.232    -12.885      0.000      -3.479      -2.491\n",
+       "==============================================================================\n",
+       "Omnibus:                        0.870   Durbin-Watson:                   2.285\n",
+       "Prob(Omnibus):                  0.647   Jarque-Bera (JB):                0.768\n",
+       "Skew:                          -0.422   Prob(JB):                        0.681\n",
+       "Kurtosis:                       2.543   Cond. No.                     5.47e+04\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 5.47e+04. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fit_3 = smf.ols(formula = \"height ~ average_height_parents + gender + weight + bmi\", data=df).fit()\n",
+    "fit_3.summary()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
